# better-stream

./: Cargo.toml  README.md  justfile
src/: main.rs  ui.rs
src/stream/: rtsp.rs
src/ui/: app.rs  player.rs  threading.rs
