[package]
name = "better-stream"
version = "0.1.0"
edition = "2024"
description = "A multi-stream RTSP viewer for quick glances detecting frozen streams."
readme = "README.md"
license-file = "LICENSE.txt"
repository = "https://github.com/konstantintutsch/better-stream"

[dependencies]
tokio = { version = ">=1.49.0", features = ["full"] }
iced = { version = ">=0.14.0", features = ["advanced"] }
retina = ">=0.4.0"
log = "0.4.29"
env_logger = "0.11.8"
